# GB-Patterns

./: README.md
01/: CMakeLists.txt  app.cpp
01/include/: MyTools.h
01/src/: Bomb.cpp  Ground.cpp  MyTools.cpp  SBomber.cpp  Tank.cpp
02/: CMakeLists.txt  app.cpp
02/include/: Factory.h  GameObject.h  SBomber.h
02/src/: Commands.cpp  House.cpp  LevelGUI.cpp  SBomber.cpp
03/: CMakeLists.txt  app.cpp
03/include/: Bomb.h  BombIterator.h  GameObject.h  LevelGUI.h  SBomber.h
03/src/: Bomb.cpp  BombIterator.cpp  Factory.cpp  Plane.cpp  SBomber.cpp  Tank.cpp
04/: .gitignore  CMakeLists.txt
04/include/: CollisionDetector.h  Commands.h  House.h  Tank.h  Tree.h
04/src/: CollisionDetector.cpp  House.cpp  SBomber.cpp  Tree.cpp
05/: CMakeLists.txt  app.cpp
05/include/: Bomb.h  BombObserver.h  CollisionDetector.h  Commands.h  DestroyableGroundObject.h  DynamicLogger.h  DynamicObject.h  House.h  MyTools.h  Plane.h  SBomber.h  Tank.h  Tree.h
05/src/: Bomb.cpp  CollisionDetector.cpp  Commands.cpp  DynamicLogger.cpp  Ground.cpp  LevelGUI.cpp  Plane.cpp  SBomber.cpp  Tank.cpp
06/: CMakeLists.txt  app.cpp
06/include/: LevelGUI.h  MyTools.h  Plane.h  SBomber.h  Tank.h
06/src/: Bomb.cpp  LevelGUI.cpp  MyTools.cpp  Plane.cpp  SBomber.cpp  Tank.cpp
07/: App.cpp  CMakeLists.txt
07/include/: FileLogger.h  MyTools.h  SBomber.h
07/src/: FileLogger.cpp  Ground.cpp  LevelGUI.cpp  MyTools.cpp  SBomber.cpp  SBomberImpl.cpp
08/: CMakeLists.txt  app.cpp
08/include/: Bomb.h  MyTools.h  SBomber.h
08/src/: Bomb.cpp  Ground.cpp  House.cpp  LevelGUI.cpp  MyTools.cpp  (+3 more)
(+4 files in other folders)
